--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,12 +4,15 @@
     padding: 0;
     box-sizing: border-box;
     color: white;
-    font-size: 1.3rem;
+    font-size: 2.4vw;
     font-family: 'wellfleet';
 }
 /* utility classes */
 .svh-100 {
     height: 100svh;
+}
+.w-10 {
+    width: 10vw; 
 }
 .bg-dark {
     background-color: #17171e;
@@ -32,8 +35,11 @@
 .grow-1 {
     flex-grow: 1;
 }
-.grow-4 {
-    flex-grow: 4;
+.grow-2 {
+    flex-grow: 2;
+}
+.grow-3 {
+    flex-grow: 3;
 }
 .shrink-1{
     flex-shrink: 1;
@@ -46,15 +52,35 @@
 }.shrink-5{
     flex-shrink: 5;
 }
+.radius-100 {
+    border-radius: 100%;
+}
+.aspect-ratio-1{
+    aspect-ratio: 1;
+}
 .content-center {
     justify-content: center;
 }
 .items-center {
     align-items: center;
 }
+.g-12 {
+    gap: 12px;
+}
+.p-4 {
+    padding: 4px;
+}
+.f-4 {
+    font-size: 4.8vw;
+}
 .container {
     width: 540px;
     aspect-ratio: 1;
+}
+.enabled{
+    color: gray;
+    box-shadow: 2px 2px 2px 2px gray inset, 2px 2px 2px 2px gray;
+    border: 0 transparent solid;
 }
 /* specific classes */
 @media (max-width: 576px) {
