--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,9 @@
 .svh-100 {
     height: 100svh;
 }
+.vw-100 {
+    width: 100vw;
+}
 .w-10 {
     width: 10vw; 
 }
@@ -82,19 +85,23 @@
     box-shadow: 2px 2px 2px 2px gray inset, 2px 2px 2px 2px gray;
     border: 0 transparent solid;
 }
+
 /* specific classes */
+a {
+    text-decoration: none;
+}
 @media (max-width: 576px) {
     .container {
-        background-color: black;
+        width: 271px;
     }
 }
 @media (min-width: 576px) {
     .container {
-        background-color: gray;
+        width: 271px;
     }
 }
 @media (min-width: 768px) {
     .container {
-        background-color: white;
+        width: 540px;
     }
 }
